--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="header">MisterRobot's TicTacToe</div>
+        <div class="sidebar">
+            <div>
+                <div class="player-1-label">Player One(X):</div>
+                <div class="player-1-name">MisterRobot</div>
+            </div>
+            <div>
+                <div class="player-2-label">Player Two(O):</div>
+                <div class="player-2-name">AI</div>
+            </div>
+        </div>
+
+
+        <div class="main">
+            <div class="game-container">
+                <div class="square" data-index="00"></div>
+                <div class="square" data-index="01"></div>
+                <div class="square" data-index="02"></div>
+                <div class="square" data-index="10"></div>
+                <div class="square" data-index="11"></div>
+                <div class="square" data-index="12"></div>
+                <div class="square" data-index="20"></div>
+                <div class="square" data-index="21"></div>
+                <div class="square" data-index="22"></div>
+            </div>
+        </div>
+        <div class="footer"></div>
+    </div>
 
     <script src="script.js"></script>
 </body>
