--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="sidebar">
             <div>
                 <div class="player-1-label">Player One(X):</div>
-                <div class="player-1-name">MisterRobot</div>
+                <div class="player-1-name">PlayerOne</div>
             </div>
             <div>
                 <div class="player-2-label">Player Two(O):</div>
-                <div class="player-2-name">AI</div>
+                <div class="player-2-name">PlayerTwo</div>
             </div>
         </div>
 
@@ -35,6 +35,28 @@
                 <div class="square" data-index="21"></div>
                 <div class="square" data-index="22"></div>
             </div>
+
+            <dialog class="end-game">
+                <div class="end-message">game over!</div>
+                <button>Reset?</button>
+            </dialog>
+
+            <dialog class="start-game">
+                <div>Enter player names or simply click 'New Game' to be player1 and player2</div>
+                <form method="dialog" action="">
+                    <fieldset>
+                        <label for="playerOne">player 1 (X)</label>
+                        <input type="text" id="playerOne">
+                    </fieldset>
+                    <fieldset>
+                        <label for="playerTwo">player 2(X)</label>
+                        <input type="text" id="playerTwo">
+                    </fieldset>
+                    <!-- <button class="start-game-button">New Game?</button> -->
+                </form>
+                <button class="start-game-button">New Game?</button>
+
+            </dialog>
         </div>
         <div class="footer"></div>
     </div>
