Finish JS functionality
Finished the tictactoe functionality in javascript. We can now name the players, player the game,
reset the game, display the game, etc.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <dialog class="end-game">
                 <div class="end-message">game over!</div>
-                <button>Reset?</button>
+                <button class="end-game-button">Reset?</button>
             </dialog>
 
             <dialog class="start-game">
@@ -52,7 +52,6 @@
                         <label for="playerTwo">player 2(X)</label>
                         <input type="text" id="playerTwo">
                     </fieldset>
-                    <!-- <button class="start-game-button">New Game?</button> -->
                 </form>
                 <button class="start-game-button">New Game?</button>
 
