--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <input type="text" id="playerOne">
                     </fieldset>
                     <fieldset>
-                        <label for="playerTwo">player 2(X)</label>
+                        <label for="playerTwo">player 2(O)</label>
                         <input type="text" id="playerTwo">
                     </fieldset>
                 </form>
